--- a/module4/mod4-exercise2.css
+++ b/module4/mod4-exercise2.css
@@ -18,3 +18,30 @@ body{
 .hard-mode {
   background-color: lightcoral;
 }
+
+/* Exercise 2 */
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  padding: 10px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+p {
+  margin: 20px 0;
+  font-size: 18px;
+}
+
+button {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  background-color: #5e41f2;
+  color: white;
+}
