mod8 exercise 4 Interactive table

--- a/module8/mod8-exercise1.css
+++ b/module8/mod8-exercise1.css
@@ -106,3 +106,28 @@ button {
 button:hover {
     background-color: #218838;
 }
+
+/* Exercise 4 */
+/* Style for the table container */
+.table-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    text-align: center;
+}
+
+/* Style for the table */
+table {
+    margin-top: 1rem;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+/* Style for the table headers */
+th, td {
+    padding: 10px;
+    border: 1px solid #ccc;
+    text-align: left;
+}
