--- a/module7/mod7-exercise1.css
+++ b/module7/mod7-exercise1.css
@@ -55,6 +55,7 @@ body {
     border-radius: 5px;
 }
 
+/* Exercise 2 */
 /* Style for the greeting container */
 .greeting {
     background: white;
